@@ -8,6 +8,9 @@ Notes:
   - http://msdn.microsoft.com/en-us/library/windows/desktop/ms679351(v=vs.85).aspx
   - http://blogs.msdn.com/b/oldnewthing/archive/2007/11/28/6564257.aspx
 
+20160821
+* worked on tests
+
 20160411
 * worked on tests
 
